[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ardupilot"
version = "4.6.0"

[project.optional-dependencies]
tests = [
    "mock",
    "numpy",
    "pexpect",
    "pytest",
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "black"
skip = ["./modules/", "./build/"]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
ignore_missing_imports = true
exclude = [
    'modules/',
    'build/',
    'cmake-build-debug/',
    '/setup\.py$'
]
