add_subdirectory(AP_ADC)
add_subdirectory(AP_Common)
add_subdirectory(AP_Compass)
add_subdirectory(AP_DCM)
add_subdirectory(AP_EEPROMB)
add_subdirectory(AP_GPS)
add_subdirectory(AP_IMU)
add_subdirectory(AP_Math)
add_subdirectory(APM_BMP085)
add_subdirectory(APM_PerfMon)
add_subdirectory(APM_PI)
add_subdirectory(APM_RC)
add_subdirectory(AP_Navigation)
add_subdirectory(APO)
add_subdirectory(AP_OpticalFlow)
add_subdirectory(AP_PID)
add_subdirectory(AP_RangeFinder)
add_subdirectory(AP_RC)
add_subdirectory(AP_RC_Channel)
add_subdirectory(DataFlash)
add_subdirectory(FastSerial)
add_subdirectory(GCS_MAVLink)
add_subdirectory(GCS_SIMPLE)
add_subdirectory(GPS_IMU)
add_subdirectory(GPS_MTK)
add_subdirectory(GPS_NMEA)
add_subdirectory(GPS_UBLOX)
add_subdirectory(memcheck)
add_subdirectory(ModeFilter)
add_subdirectory(PID)
add_subdirectory(RC_Channel)
add_subdirectory(Waypoints)
add_subdirectory(Trig_LUT)

